# rust-aes-proofs

./: Cargo.toml  TODO.md  build.rs  readme.md
benches/: por.rs  pot.rs
src/: lib.rs  utils.rs
src/aes_low_level/: aes_ni.rs  key_expansion.rs  mod.rs  vaes.c  vaes.rs
src/aes_low_level/aes_ni/: expand.rs
src/por/: aes_ni.rs  mod.rs  opencl.rs  software.rs  software_bit_slicing.rs  software_lut.rs  test_data.rs  utils.rs  vaes.rs
src/por/opencl/: kernels  kernels.cl  utils.rs
src/pot/: aes_ni.rs  mod.rs  test_data.rs  vaes.rs
