[package]
name = "rust-aes-proofs"
version = "0.1.0"
authors = [
    "Jeremiah Wagstaff <jeremiah.wagstaff@gmail.com>",
    "Nazar Mokrynskyi <nazar@mokrynskyi.com>"
]
edition = "2018"
autobenches = false

[dependencies]
# TODO: Absorb this dependency
aes-benchmarks = {git = "https://github.com/subspace/aes-benchmarks.git"}
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "pot"
harness = false

[[bench]]
name = "por"
harness = false
