[package]
name = "rust-aes-proofs"
version = "0.1.0"
authors = [
    "Jeremiah Wagstaff <jeremiah.wagstaff@gmail.com>",
    "Nazar Mokrynskyi <nazar@mokrynskyi.com>"
]
edition = "2018"
autobenches = false

[dependencies]
aes-soft = "0.3.3"
ocl = "0.19.3"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "pot"
harness = false

[[bench]]
name = "por"
harness = false
